<resources>
    <string name="app_name">Healthify</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="OK">OK!</string>
    <string name="emailverify">Verify Your E-mail</string>
    <string name="notverified">E-mail not verified</string>
    <string name="verification_message">Verify the email and Log in with your credentials. If you can\'t find the email in your mailbox, kindly check in spam folder</string>

    <string-array name="user_types">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Manager</item>
    </string-array>

    <string-array name="doctor_types">
        <item>General Physician</item>
        <item>Orthopedic</item>
        <item>Ophthalmologist</item>
        <item>Dentist</item>
        <item>Cardiologist</item>
        <item>Neurologist</item>
        <item>Psychiatrist</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="app_title">Healthify</string>
    <string name="verifyingMessage">Verifying device…</string>
    <string name="LoginFailedMessage">Login failed</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="creatingProfile">Creating your profile...</string>
    <string name="passwordHint">Enter password</string>
    <string name="hi_we_are_here_to_help_you">Hi,We are here to help you</string>
    <string name="help_center">Help-center</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
</resources>