<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="#e2e7e1">

    <LinearLayout
        android:id="@+id/lin3"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#4799FA">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:background="#4799FA"
            android:src="@drawable/arrow_1" />

        <TextView
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/help_center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="384dp"
        android:layout_height="176dp"
        android:layout_below="@id/lin3"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_1"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="410dp"
        android:layout_height="41dp"
        android:layout_marginTop="250dp"
        android:paddingStart="15dp"
        android:text="@string/frequently_asked_questions"
        android:textColor="#4799FA"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="179dp"
        android:layout_height="70dp"
        android:layout_below="@+id/lin3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:text="@string/hi_we_are_here_to_help_you"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="363dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="Q) How to book appointment ?"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="365dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="Ans) Open book appointment , select date and time and doctor type and describe your problem and click on book appointment"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="363dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Q) How to join video conferencing ?"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="365dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Ans) Open your book appointment where date and time of appointment is mentioned. click on your appointment before 5 min of staring of meeting "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="363dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Q) How to get my prescription ?"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="365dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="Ans)click on my prescription option of activity menu.select your last appointment and click on my prescription.  "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="363dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="Q) How to download medical reports ?"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="365dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="Ans) Click on Download reports on home page. You find your all old and new reports. Click on report which you want to download"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="363dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="Q) How to update medical history ?"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="365dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="Ans) Click on update medical history option on home screen. click on choose file for choosing the file. select your file type and upload the file"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </ScrollView>

</RelativeLayout>
